--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
 <title>标题</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
+<link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+<div id="aa">
 这是我的第一个主页
+</div>
+
 </body>
 </html>
