--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<title>标题</title>
-<meta name="keywords" content="">
-<meta name="description" content="">
-<link href="css/style.css" rel="stylesheet" type="text/css" />
+	<meta charset="UTF-8">
+	<title>Document</title>
+	<script src="js.js"></script>
 </head>
 <body>
-<div id="aa">
-这是我的第一个主页
-</div>
-
+	<div style="background: red; width: 200px; height: 100px;" id="div1">
+		<span>aa</span>
+	</div>
+	<input type="button" value="获取">
 </body>
 </html>
