--- a/dd.html
+++ b/dd.html
@@ -6,10 +6,9 @@
 	<script src="js.js"></script>
 </head>
 <body>
-	<div style="background: red; width: 200px; height: 100px;" id="div1">
-		<span>aa</span>
+	<div style="background: #ccc; width: 200px; height: 100px;" id="div1">
+		<span>dd</span>
 	</div>
 	<input type="button" value="获取">
-	<a href="dd.html">W3School</a>
 </body>
 </html>
