--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>我的个人站</title>
-	<script src="js/jquery-3.0.0.js"></script>
-	<script  src="js/index.js"></script>
 	<link rel="Shortcut Icon" href="images/geren.ico"/>
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -117,5 +115,8 @@
 		</ul>
 	</div>
 	<div id="footer">我是底部</div>
+	
+	<script src="js/jquery-3.0.0.min.js"></script>
+	<script  src="js/index.js"></script>
 </body>
 </html>	
