--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<div class="btn"><img src="images/gb1.png" alt=""></div>
 				<div class="caseul">
 					<ul>
-						<li class="pos_1"><img src="images/case1.jpg" alt=""><div class="name"><h3>仿微博前端1</h3>利用ajax注册和登录<br>Date:2016-8-10</div></li>
+						<li class="pos_1"><img src="images/case1.jpg" alt=""><div class="name"><h3><a href="antiBlog.html">仿微博前端1</a></h3>利用ajax注册和登录<br>Date:2016-8-10</div></li>
 						<li class="pos_2"><img src="images/case1.jpg" alt=""><div class="name"><h3>仿微博前端2</h3>利用ajax注册和登录<br>Date:2016-8-10</div></li>
 						<li class="pos_3"><img src="images/case1.jpg" alt=""><div class="name"><h3>仿微博前端3</h3>利用ajax注册和登录<br>Date:2016-8-10</div></li>
 						<li class="pos_4"><img src="images/case1.jpg" alt=""><div class="name"><h3>仿微博前端4</h3>利用ajax注册和登录<br>Date:2016-8-10</div></li>
