--- a/antiBlog.html
+++ b/antiBlog.html
@@ -7,6 +7,7 @@
 	<link rel="Shortcut Icon" href="img/weibo.ico"/>
 	<link rel="stylesheet"  href="css/smoothness/jquery.ui.css"/>
 	<link rel="stylesheet"  href="css/styleblog.css"/>
+	
 </head>
 <body>
 	<div id="header">
@@ -296,7 +297,7 @@
 		</div>
 	</div>
 	<div id="backtop"><img src="img/top.png" alt=""></div>
-	<script src="js/jquery-3.0.0.min.js"></script>
+	<script src="js/jquery.js"></script>
 	<script src="js/jquery.ui.js"></script>
 	<script src="js/jquery.validate.js"></script>
 	<script src="js/jquery.form.js"></script>
