--- a/antiBlog.html
+++ b/antiBlog.html
@@ -298,7 +298,7 @@
 	</div>
 	<div id="backtop"><img src="img/top.png" alt=""></div>
 	<script src="js/jquery.js"></script>
-	<script src="js/jquery.ui.js"></script>
+	<script src="js/jquery-ui.min.js"></script>
 	<script src="js/jquery.validate.js"></script>
 	<script src="js/jquery.form.js"></script>
 	<script src="js/jquery.cookie.js"></script>
