--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<div id="load"><img src="images/load.gif" alt="加载中..."></div>
 	<div id="bg1"><img src="images/bg1.png" alt=""></div>
 	<div id="header">
 		<div id="logo"><img src="images/logo.png" alt=""></div>
@@ -116,7 +117,7 @@
 	</div>
 	<div id="footer">我是底部</div>
 	
-	<script src="js/jquery-3.0.0.min.js"></script>
+	<script src="js/jquery.js"></script>
 	<script  src="js/index.js"></script>
 </body>
 </html>	
